--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     
     <div class="app-container">
         <header class="header">
-            <div style="display: flex; justify-content: space-between;margin: 2px 15px;"> <span class="brand-name site-name">Flash
-                    sales</span>
+            <div style="display: flex; justify-content: space-between;margin: 2px 15px;"> <span class="brand-name site-name">Flux
+                    mall</span>
                 <div class="header-right">
                     <h5 style="color:#918e8e" class="userId">ID: </h5>
                     <a href="#me" data-lucide="circle-user" class="text-teal"></a>
@@ -69,10 +69,10 @@
                     <div class="icon-box orange-bg-dim">
                         <i data-lucide="ferris-wheel" class="text-teal"></i>
                     </div>
-                    <div class="card-text">
-                        <h3>Spin Wheel</h3>
-                        <p>Refer 10 people to earn spin rewards</p>
-                    </div>
+                    <!-- <div class="card-text"> -->
+                        <!-- <h3>Spin Wheel</h3> -->
+                        <!-- <p>Refer 10 people to earn spin rewards</p> -->
+                    <!-- </div> -->
                 </div>
                 <i data-lucide="chevron-right" class="text-muted"></i>
             </a>
