--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                     <div class="icon-box orange-bg-dim">
                         <i data-lucide="ferris-wheel" class="text-teal"></i>
                     </div>
-                    <!-- <div class="card-text"> -->
-                        <!-- <h3>Spin Wheel</h3> -->
-                        <!-- <p>Refer 10 people to earn spin rewards</p> -->
-                    <!-- </div> -->
+                    <div class="card-text">
+                        <h3>Spin Wheel</h3>
+                        <p>Refer 10 people to earn spin rewards</p>
+                    </div>
                 </div>
                 <i data-lucide="chevron-right" class="text-muted"></i>
             </a>
