--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <p class="sub-heading">Withdraw funds to your Fiat wallet</p>
             
             <details>
-                <summary class="section-title" style="font-size: 14px;">
+                <summary class="section-title" style="font-size: 14px; border: 1px solid green; border-radius: 5px; cursor: pointer; justify-content: center; align-items: center; background-color: red;">
                     <i data-lucide="flame" class="text-yellow"></i>Bind Bank Account Details <i class="ri-arrow-right-up-fill text-teal"></i>
                 </summary>
                 <div class="action-card block">
